api/swim_schema/src/schema/tests/derive/validated_form/not_op_arg_count.stderr
error: Only one argument is permitted in a NOT operator
  --> $DIR/src/schema/tests/derive/validated_form/not_op_arg_count.rs:18:14
   |
18 |     #[derive(ValueSchema)]
   |              ^^^^^^^^^^^
